--- a/src/templates/template.html
+++ b/src/templates/template.html
@@ -1,54 +1,134 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
 
-<html lang="en">
 <head>
-<meta charset="utf-8">
-<title><!-- build:title --></title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="shortcut icon" href="favicon.ico">
-<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css">
-<link rel="stylesheet" href="../css/lightbox.css">
-<link rel="stylesheet" href="../css/main.css">
-<script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.min.js"></script>
-<script src="../js/jquery-1.11.0.min.js"></script>
-<script src="../js/lightbox.min.js"></script>
-<script src="../js/main.js"></script>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>Responsive modules header</title>
+
+    <style type="text/css">
+        body {
+            margin-left: 0px;
+            margin-top: 0px;
+            margin-right: 0px;
+            margin-bottom: 0px;
+            -webkit-text-size-adjust: none;
+            background-color: #ffffff;
+        }
+        
+        table {
+            border-collapse: collapse;
+        }
+        
+        .ExternalClass * {
+            line-height: 100%;
+        }
+        
+        .ReadMsgBody {
+            width: 100%;
+        }
+        
+        .ExternalClass {
+            width: 100%;
+        }
+        
+        td {
+            mso-line-height-rule: exactly;
+            -mso-line-height-rule: exactly;
+        }
+        
+        .appleLinkGray a {
+            color: #959595 !important;
+            background-color: #ffffff !important;
+            text-decoration: none !important;
+        }
+        
+        .appleLinkGray {
+            color: #959595 !important;
+            background-color: #ffffff !important;
+            text-decoration: none !important;
+        }
+        
+        @media only screen and (max-width:480px) {
+            table[class=container],
+            td[class=responsiveCell] {
+                width: 100% !important;
+            }
+            td[class=responsiveCell] {
+                display: block !important;
+            }
+            table img[class="NotMobile"] {
+                display: none !important;
+                visibility: hidden !important;
+            }
+            td[class="NotTD"] {
+                display: none !important;
+                visibility: hidden !important;
+            }
+            img[class="NoIMG"] {
+                display: none !important;
+                visibility: hidden !important;
+            }
+            td[class="CenterText"] {
+                text-align: center;
+                margin: 0px !important;
+                padding: 0px !important;
+            }
+            img[class="CenterImage"] {
+                display: block;
+                margin-left: auto;
+                margin-right: auto padding: 0px !important;
+            }
+            img[class="CenterRewardsImage"] {
+                display: block;
+                padding-top: 29px !important;
+            }
+            td[class="nopadding"] {
+                margin: 0px !important;
+                padding: 10px !important;
+            }
+            td[class="nopaddingvfix"] {
+                margin-right: 0px !important;
+                padding-right: 0px !important;
+                padding-left: 0px;
+                padding-top: 15px !important;
+            }
+            table[class="FullWidth"] {
+                width: 100% !important;
+            }
+            td[class="displaynone"] {
+                display: none !important;
+                visibility: hidden !important;
+                font-family:
+            }
+            td[class="CenterTextiphone"] {
+                text-align: center;
+                margin: 0px !important;
+                padding-top: 15px;
+            }
+            td[class="footerLinks"] {
+                padding-left: 25px !important;
+            }
+        }
+    </style>
+
 </head>
+
 <body>
-  <div id="container">
-    <header>
-      <h1><img src="../images/dvbris.svg" alt="Dvbris" class="logo"></h1>
-      <h2><!-- build:header --></h2>
-    </header>
-    <nav><div class="nav-toggle dropdown"><a>Navigation</a></div><ul>
-      <li><a href="../index.html">Home</a></li>
-      <li><a href="../about.html">About Us</a></li>
-      <li class="dropdown"><a>Photos</a><ul>
-        <li><a href="../outside_photos.html">Outside</a></li>
-        <li><a href="../inside_photos.html">Inside</a></li>
-      </ul></li>
-      <li class="dropdown"><a>On Holiday</a><ul>
-        <li><a href="../hol_warwickshire.html">Warwickshire Ring</a></li>
-        <li><a href="../hol_leicester.html">Leicester Section</a></li>
-        <li><a href="../hol_grand_union_n.html">Grand Union North</a></li>
-        <li><a href="../hol_grand_union_s.html">Grand Union South</a></li>
-      </ul></li>
-      <li><a href="../stretch.html">Stretch Job</a></li>
-      <li class="dropdown"><a>Paint Jobs</a><ul>
-        <li><a href="../painting1.html">Paint Job One</a></li>
-        <li><a href="../painting2.html">Paint Job Two</a></li>
-      </ul></li>
-      <li><a href="../links.html">Links</a></li>
-      <li><a href="../feedback.html">Feedback</a></li>
-    </ul></nav>
-    <div id="wrapper">
-      <div id="content"><!-- build:content --></div>
-      <div id="content-footer"><!-- build:footer --></div>
-    </div>
-    <footer>
-      <p>Website created by <a href="http://geraintwhite.co.uk">Geraint White</a></p>
-      <p>Copyright &copy; 2014 H White. All rights reserved.</p>
-    </footer>
-  </div>
+
+    <table width="600" border="0" align="center" cellpadding="0" cellspacing="0" class="FullWidth">
+        <tbody>
+            <tr>
+                <!-- build:header -->
+            </tr>
+            <tr>
+                <td>&nbsp;</td>
+            </tr>
+            <tr>
+                <!-- build:footer -->
+            </tr>
+        </tbody>
+    </table>
+
 </body>
+
 </html>
