--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,46 @@
-#red {
-    color: red;
-    font-size: 14px;
-    line-height: 18px;
+#marqueeHeading {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 48px;
+    line-height: 52px;
+    color: #cd040b;
+    padding: 0px 0px 0px 0px;
+}
+
+#marqueeHeadingLink {
+    color: #cd040b !important;
+    text-decoration: none !important;
+}
+
+#marqueeSubheading {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    line-height: 24px;
+    color: #000000;
+    padding: 0px 0px 0px 0px;
+}
+
+#contentTitle {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 24px;
+    line-height: 28px;
+    color: #000000;
+    padding: 0px 0px 0px 0px;
+}
+
+#contentText {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    line-height: 20px;
+    color: #000000;
+    padding: 0px 0px 0px 0px;
+}
+
+#blueLink {
+    color: #0066cc !important;
+    text-decoration: none !important;
+}
+
+#footerGrayLink {
+    color: #959595 !important;
+    text-decoration: none !important;
 }
