--- a/src/templates/template.html
+++ b/src/templates/template.html
@@ -4,6 +4,8 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Responsive modules header</title>
+    
+    <link rel="stylesheet" type="text/css" href="style.css">
 
     <style type="text/css">
         body {
