--- a/src/templates/template.html
+++ b/src/templates/template.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Responsive modules header</title>
+    <title>Email title</title>
     
     <link rel="stylesheet" type="text/css" href="style.css">
 
@@ -123,7 +123,10 @@
                 <!-- build:header -->
             </tr>
             <tr>
-                <td>&nbsp;</td>
+                <!-- build:content -->
+            </tr>
+            <tr>
+                <!-- build:myRewards -->
             </tr>
             <tr>
                 <!-- build:footer -->
