compress task fixed

--- a/src/templates/template.html
+++ b/src/templates/template.html
@@ -1,119 +1,137 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Email title</title>
-    
-    <link rel="stylesheet" type="text/css" href="style.css">
-
+  <head>
+    <title></title>
     <style type="text/css">
-        body {
-            margin-left: 0px;
-            margin-top: 0px;
-            margin-right: 0px;
-            margin-bottom: 0px;
-            -webkit-text-size-adjust: none;
-            background-color: #ffffff;
+      body {
+        margin-left: 0px;
+        margin-top: 0px;
+        margin-right: 0px;
+        margin-bottom: 0px;
+        -webkit-text-size-adjust: none;
+        background-color: #ffffff;
+      }
+      
+      table {
+        border-collapse: collapse;
+      }
+      
+      .ExternalClass * {
+        line-height: 100%;
+      }
+      
+      .ReadMsgBody {
+        width: 100%;
+      }
+      
+      .ExternalClass {
+        width: 100%;
+      }
+      
+      td {
+        mso-line-height-rule: exactly;
+        -mso-line-height-rule: exactly;
+      }
+      
+      .appleLinkGray a {
+        color: #959595 !important;
+        background-color: #ffffff !important;
+        text-decoration: none !important;
+      }
+      
+      .appleLinkGray {
+        color: #959595 !important;
+        background-color: #ffffff !important;
+        text-decoration: none !important;
+      }
+      
+      @media only screen and (max-width:480px) {
+        table[class=container],
+        td[class=responsiveCell] {
+          width: 100% !important;
         }
-        
-        table {
-            border-collapse: collapse;
+        td[class=responsiveCell] {
+          display: block !important;
         }
-        
-        .ExternalClass * {
-            line-height: 100%;
+        table img[class="NotMobile"] {
+          display: none !important;
+          visibility: hidden !important;
         }
-        
-        .ReadMsgBody {
-            width: 100%;
+        td[class="NotTD"] {
+          display: none !important;
+          visibility: hidden !important;
         }
-        
-        .ExternalClass {
-            width: 100%;
+        img[class="NoIMG"] {
+          display: none !important;
+          visibility: hidden !important;
         }
-        
-        td {
-            mso-line-height-rule: exactly;
-            -mso-line-height-rule: exactly;
+		td[class="CenterTextHeader"] {
+          text-align: center;
+          margin: 0px !important;
+          padding: 0px 0px 0px 0px !important;
         }
-        
-        .appleLinkGray a {
-            color: #959595 !important;
-            background-color: #ffffff !important;
-            text-decoration: none !important;
+        td[class="CenterText"] {
+          text-align: center;
+          margin: 0px !important;
+          padding: 195px 0px 0px 0px !important;
         }
-        
-        .appleLinkGray {
-            color: #959595 !important;
-            background-color: #ffffff !important;
-            text-decoration: none !important;
+        img[class="CenterImage"] {
+          display: block;
+          margin-left: auto;
+          margin-right: auto;
+          padding: 0px !important;
         }
-        
-        @media only screen and (max-width:480px) {
-            table[class=container],
-            td[class=responsiveCell] {
-                width: 100% !important;
-            }
-            td[class=responsiveCell] {
-                display: block !important;
-            }
-            table img[class="NotMobile"] {
-                display: none !important;
-                visibility: hidden !important;
-            }
-            td[class="NotTD"] {
-                display: none !important;
-                visibility: hidden !important;
-            }
-            img[class="NoIMG"] {
-                display: none !important;
-                visibility: hidden !important;
-            }
-            td[class="CenterText"] {
-                text-align: center;
-                margin: 0px !important;
-                padding: 0px !important;
-            }
-            img[class="CenterImage"] {
-                display: block;
-                margin-left: auto;
-                margin-right: auto padding: 0px !important;
-            }
-            img[class="CenterRewardsImage"] {
-                display: block;
-                padding-top: 29px !important;
-            }
-            td[class="nopadding"] {
-                margin: 0px !important;
-                padding: 10px !important;
-            }
-            td[class="nopaddingvfix"] {
-                margin-right: 0px !important;
-                padding-right: 0px !important;
-                padding-left: 0px;
-                padding-top: 15px !important;
-            }
-            table[class="FullWidth"] {
-                width: 100% !important;
-            }
-            td[class="displaynone"] {
-                display: none !important;
-                visibility: hidden !important;
-                font-family:
-            }
-            td[class="CenterTextiphone"] {
-                text-align: center;
-                margin: 0px !important;
-                padding-top: 15px;
-            }
-            td[class="footerLinks"] {
-                padding-left: 25px !important;
-            }
+        td[class="nopadding"] {
+          margin: 0px !important;
+          padding: 10px !important;
         }
+        td[class="paddingButton"] {
+          margin: 0px !important;
+          padding-top: 30px !important;
+          padding-bottom: 20px !important;
+          padding-left: 40px !important;
+        }
+		td[class="control"] {
+          margin: 0px !important;
+          padding: 20px 10px 10px 10px !important;
+        }
+		td[class="bulletText"] {
+          margin: 0px !important;
+          padding: 17px 0px 0px 10px !important;
+        }
+		td[class="disclaimer"] {
+          margin: 0px !important;
+          padding: 25px 10px 25px 10px !important;
+        }
+        td[class="nopaddingvfix"] {
+          margin-right: 0px !important;
+          padding-right: 0px !important;
+          padding-left: 0px;
+          padding-top: 15px !important;
+        }
+        table[class="FullWidth"] {
+          width: 100% !important;
+        }
+        td[class="displaynone"] {
+          display: none !important;
+          visibility: hidden !important;
+          font-family:
+        }
+        td[class="CenterTextiphone"] {
+          text-align: center;
+          margin: 0px !important;
+          padding-top: 15px;
+        }
+        td[class="footerLinks"] {
+			padding: 5px 10px 5px 10px !important;
+        }
+		img[class="movies"] {
+          max-width: 100%;
+            height: auto !important;
+        }
+      }
     </style>
-
-</head>
+  </head>
 
 <body>
 
